# RouteHawk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  config.example.yaml  config.local-lab.yaml  pyproject.toml  run_dashboard.ps1  run_lab_scan.ps1  run_lab_server.ps1
.github/workflows/: ci.yml  e2e-smoke.yml
docs/: DECISIONS.md  PRODUCT.md  RELEASE.md  RELEASE_CHECKLIST.md  ROADMAP.md  USAGE.md
docs/screenshots/: README.md
examples/: README.md  demo-report.html  demo-report.md  demo-results.json
labs/: Dockerfile  README.md  demo_server.py  docker-compose.yml
routehawk/: __init__.py  __main__.py  cli.py  web_app.py
routehawk/analyzers/: __init__.py  auth_behavior.py  clustering.py  cors.py  endpoint_extractor.py  idor_candidates.py  route_classifier.py  route_normalizer.py  security_headers.py  tech_fingerprint.py
routehawk/collectors/: __init__.py  graphql.py  html_assets.py  javascript_files.py  live_hosts.py  openapi.py  robots.py  security_txt.py  sitemap.py
routehawk/core/: __init__.py  config.py  diff.py  http_client.py  models.py  rate_limit.py  scheduler.py  scope.py
routehawk/importers/: __init__.py  httpx_json.py  nmap_xml.py  (+2 more)
tests/: test_cli.py  test_cli_compare.py  test_cli_history.py  test_cli_import.py  test_clustering.py  test_collectors.py  test_config.py  test_diff.py  test_endpoint_extractor.py  test_headers.py  test_http_client.py  test_importers.py  test_lab.py  test_reports.py  test_route_normalizer.py  test_scope.py  test_scoring.py  test_storage.py  test_web_app.py
(+7 files in other folders)
